--- a/notebook/mongodb.ipynb
+++ b/notebook/mongodb.ipynb
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "98ad8559",
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_string = \"mongodb+srv://adarsh_keshrwani:Adarsh144@cluster0.sjao0ey.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\""
+    "connection_string = \"mongodb+srv://adarsh_keshrwani:<password>cluster0.sjao0ey.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\""
    ]
   },
   {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8468a237",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "81592beb",
    "metadata": {},
    "outputs": [],
@@ -71,17 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "82bf0cf0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x1b37c90bbe0>"
+       "<pymongo.results.InsertOneResult at 0x2333b4538b0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4cf4bdfe",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('68f22e6c63e92daee09cbdea'), 'name': 'Adarsh Keshrwani', 'age': 22, 'batch': 2025}\n"
+      "{'_id': ObjectId('68f22e6c63e92daee09cbdea'), 'name': 'Adarsh Keshrwani', 'age': 22, 'batch': 2025}\n",
+      "{'_id': ObjectId('68f75935fc4d74602f38d62c'), 'name': 'Adarsh Keshrwani', 'age': 22, 'batch': 2025}\n"
      ]
     }
    ],
