--- a/notebook/mongodb.ipynb
+++ b/notebook/mongodb.ipynb
@@ -13,6 +13,24 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "77818042",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pymongo.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "e023e81b",
    "metadata": {},
    "outputs": [],
